# inscien

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.prod  INSCIEN-BRIEF.md  InScien Logomark.html  LICENSE  Makefile  PACKAGING.md  PROJECT-STATE.md  README.md  RUNNING.md  compose.prod.yaml  compose.yaml
backend/: Dockerfile  entrypoint.sh  inscien.spec  launcher.py  main.py  pyproject.toml  requirements.txt  run_server.py
backend/core/: db.py  paths.py
backend/migrations/: 10_create_strategy_tables.py  11_create_chat_tables.py  12_drop_backtests_table.py  13_create_price_bars.py  14_add_chat_messages_session_seq_index.py  15_add_strategy_publishing_and_api_keys.py  16_create_gdelt_articles.py  17_add_is_admin_column.py  18_create_task_runs.py  19_create_health_snapshots.py  1_add_tier_column.py  20_add_chat_session_working_set.py  21_add_strategy_validation.py  22_signal_first.py  23_create_signal_tables.py  2_add_gumroad_ping_event.py  3_add_download_tracking.py  4_add_password_hash.py  5_create_download_events.py  6_update_users_auth_fields.py  7_create_course_tables.py  8_create_gumroad_sale_table.py  9_create_lab_query_events.py
backend/models/: app_settings.py  chat.py  zotero_sync.py
backend/repositories/: chat_repository.py  settings_repository.py  zotero_repository.py
backend/routers/: agent.py  chat.py  compare.py  graph.py  lab.py  map.py  narrate.py  papers.py  settings.py  verify.py  write.py  zotero.py
backend/schemas/: agent.py  chat.py  lab.py  settings.py
backend/scripts/: build_references.py  check_fused_map.py  check_refs.py  inscien_ingest.py  lab_check_manifests.py  lab_check_qdrant.py  lab_reindex.py  lab_test_answer.py  lab_test_search.py
backend/seeds/: berkeley-cs162-operating-systems.json  big-data-for-engineers-eth-zurich-spring-2026.json  harvard-224-advanced-algorithms.json  information-retrieval-eth-zurich-spring-2026.json  information-systems-for-engineers-eth-zurich-fall-2025.json  math-modelling-jason-bramburger.json  mathematics-with-applications-in-finance.json  mit-intro-probability.json  mit-linear-algebra.json  mit-matrix-methods-data-analysis.json  nyu-deep-learning.json  sebastian-raschka-machine-learning.json  stanford-cs109-probability-for-cs.json  stanford-cs229-machine-learning.json  stanford-cs231n.json  stanford-ee364a-convex-optimization.json  uc-berkeley-cs186-intro-to-db-systems.json
backend/services/: job_runner.py  reveal.py  state_guard.py
backend/services/agent/: agent_service.py  prompt.py  tools.py
backend/services/compare/: jobs.py  pipeline.py
backend/services/lab/: answer_service.py  embedding_service.py  manifest_loader.py  pdf_ingest.py  pdf_parser.py  prompt_service.py  qdrant_store.py  search_service.py  settings.py  text_utils.py  vector_store.py
backend/services/llm/: client.py
backend/services/map/: fused.py  similarity.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+892 files in other folders)
